--- a/static_devconnect/styles/global.css
+++ b/static_devconnect/styles/global.css
@@ -70,3 +70,77 @@ h1 {
     color: var(--cor-cinza);
     font-weight: 600;
 }
+
+.estilo-formulario {
+    background-color: var(--cor-branco);
+    border: var(--borda);
+    width: 100%;
+ }
+ 
+ #campo-upload{
+    display: none;
+}
+
+#texto-upload{
+    display: inline-block;
+    width: 100%;
+    max-width: 300px;
+    padding: 10px;
+    background-color: var(--cor-cinza);
+    color: var(--cor-preto);
+    text-align: center;
+}
+
+
+#cabecalho {
+    background-color: var(--cor-branco);
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+
+}
+
+#cabecalho>nav {
+    width: 85%;
+    max-width: 900px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: var(--borda);
+}
+
+#logo-mobile {
+    display: none;
+}
+
+.cabecalho-acoes {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.cabecalho-acoes>a {
+    display: flex;
+    align-items: center;
+}
+
+#foto-perfil {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    /*mantem a proporcao com um zoom para adaptar ao tamanho do elemento*/
+    object-position: center;
+    border-radius: 50%;
+}
+
+@media only screen and (max-width: 500px) {
+    #logo-mobile {
+        display: initial;
+    }
+
+    #logo-desktop {
+        display: none;
+    }
+}
